[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-const-fn-init = "0.1.1"
volatile = "0.2.6"
spin = "0.5.2"
concat-idents = "1.1.2"
bitflags = "1.2.1"
modular-bitfield = "0.11.2"
lazy_static = { version = "1.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[package.metadata.cargo-sysroot]
target = "x86_64-os-kernel.json"
