[package]
name = "aurora"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path = "../sys" }
spin = { version="0.9.2", features = ["mutex", "spin_mutex", "once"] }
thiserror-no-std = "2.0.2"