[package]
name = "sys"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_utils = { path = "../bit_utils" }
aser = { path = "../aser", default-features = false }
bitflags = "1.2.1"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
