[package]
name = "arpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path = "../sys" }
aurora_core = { path = "../aurora_core" }
aser = { path = "../aser" }
asynca = { path = "../asynca" }
arpc_derive = { path = "../arpc_derive" }
thiserror-no-std = "2.0.2"
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
