[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path = "../sys" }
aurora_core = { path = "../aurora_core" }
aser = { path = "../aser" }
arpc = { path = "../arpc" }
thiserror-no-std = "2.0.2"
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"] }
