[package]
name = "early-init"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aurora = { path = "../../lib/aurora" }
aser = { path = "../../lib/aser" }
sys = { path = "../../lib/sys" }

[panic.dev]
panic = "abort"

[panic.release]
panic = "abort"
