[package]
name = "fs-server"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std = { path = "../std" }
aurora = { path = "../aurora" }
asynca = { path = "../asynca" }
arpc = { path = "../arpc" }

[panic.dev]
panic = "abort"

[panic.release]
panic = "abort"
