[package]
name = "hwaccess-server"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_utils = { path = "../bit_utils" }
std = { path = "../std" }
aurora = { path = "../aurora" }
asynca = { path = "../asynca" }
arpc = { path = "../arpc" }
sys = { path = "../sys" }
thiserror-no-std = "2.0.2"
serde = { version = "1.0.163", default-features = false, features = ["alloc", "derive"] }
acpi = "5.0.0"
volatile = "0.5.1"

[panic.dev]
panic = "abort"

[panic.release]
panic = "abort"
