[package]
name = "sys"
version = "0.1.0"
authors = ["Athryx <jack.x.roscoe@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_utils = { path = "../bit_utils" }
bitflags = "2.4.1"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
serde = { version = "1.0.163", default-features = false, features = ["derive"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
spin = { version = "0.9.2", features = ["mutex", "spin_mutex"] }
strum = { version = "0.25.0", default-features = false, features = ["derive"] }
paste = "1.0.14"
derive_more = "0.99.17"
